--- a/requirements.txt
+++ b/requirements.txt
@@ -4,31 +4,41 @@
 #
 #    pip-compile --strip-extras
 #
-anyio==4.3.0
-    # via gql
 backoff==2.2.1
     # via gql
 beautifulsoup4==4.12.3
     # via markdownify
-gql==3.5.0
-    # via -r requirements.in
+certifi==2024.2.2
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
+gql==3.4.1
+    # via
+    #   -r requirements.in
+    #   omnivoreql
 graphql-core==3.2.3
     # via gql
 idna==3.7
     # via
-    #   anyio
+    #   requests
     #   yarl
 markdownify==0.12.1
     # via -r requirements.in
 multidict==6.0.5
     # via yarl
+omnivoreql==0.2.2
+    # via -r requirements.in
 python-dotenv==1.0.1
     # via -r requirements.in
+requests==2.32.2
+    # via requests-toolbelt
+requests-toolbelt==1.0.0
+    # via omnivoreql
 six==1.16.0
     # via markdownify
-sniffio==1.3.1
-    # via anyio
 soupsieve==2.5
     # via beautifulsoup4
+urllib3==2.2.1
+    # via requests
 yarl==1.9.4
     # via gql
